Fix solves list divider on mobile

--- a/src/components/SolvesList.css
+++ b/src/components/SolvesList.css
@@ -159,6 +159,14 @@
     line-height: 48px;
   }
 
+  .divider {
+    display: inline-block;
+    vertical-align: top;
+    height: 48px;
+    border-bottom: none;
+    border-right: 1px solid rgba(0, 0, 0, 0.12);
+  }
+
   .solvePopup {
     padding: 24px;
     width: calc(100% - 32px);
